# claude-code-shared-templates

./: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: postCreateCommand.sh
.devcontainer/codespaces/: devcontainer.json
.devcontainer/local/: devcontainer.json
.devcontainer/postCreateCommand/: 00-bashrc-store-workspace-path.sh  01-bashrc-loads-env-file.sh  02-bashrc-setups-claude-code-telemetry.sh  03-bashrc-setups-claude-code-config-dir-in-workspace.sh  04-install-claude-code.sh  05-install-claude-code-common-tools.sh  06-install-uv.sh  07-fix-workspaces-permissions.sh  08-add-template-remote.sh  10-install-system-dependencies-and-python-environment.sh  15-create-env-reload-function.sh  20-install-claude-cli.sh  25-install-dev-cli-tools.sh  30-install-project-dependencies.sh  40-init-git-submodules.sh  99-show-setup-summary.sh
.github/workflows/: ci.yml
docs/: changelog.md  roadmap.md
docs/claude/development/: 00-principles.md  01-code-style.md  02-testing.md
docs/claude/environment/: 00-overview.md  01-devcontainer-setup.md  02-secrets-and-config.md
docs/claude/style/: 00-coding-standards.md  01-documentation.md
docs/claude/workflows/: 00-task-management.md  01-template-sync.md  02-pull-requests.md  03-worktree-development.md  04-template-sync-troubleshooting.md
docs/dev/: telemetry-and-monitoring.md
docs/rfcs/: 001-project-structure.md  002-presentation-tech-stack.md  003-benchmarking-framework.md
docs/tasks/: README.md  milestone-2-devcontainer-features-and-template-sync.md  milestone-2-migration-guide.md  milestone-2-repository-migration-handoff.md  milestone-2-testing-checklist.md
example/: __main__.py
scripts/: README.md
scripts/mcp-servers/: README.md
scripts/ps-monitor/: README.md  ps-monitor.py
scripts/worktree-manager/: worktree.sh
src/example/: __init__.py  __main__.py  calculator.py  models.py  processor.py
src/myproject/: __init__.py  example.py
tests/: __init__.py  test_calculator.py  test_example.py  test_models.py  test_processor.py
